--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -237,26 +237,24 @@ services:
       - "8600:8600"
     environment:
       # Override the datasource URL to point to the MySQL container's service name
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-card:3314/card_db
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-card:3306/card_db
       # You also need to do this for Eureka!
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
     depends_on:
       - mysql-card
       - naming-server
 
-  statement-service:
-    build:
-      context: ./statement-service
-    ports:
-      - "8700:8700"
-    environment:
-      # Override the datasource URL to point to the MySQL container's service name
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-card:3315/statement_db
-      # You also need to do this for Eureka!
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
-    depends_on:
-      - mysql-statement
-      - naming-server
+#  statement-service:
+#    build:
+#      context: ./statement-service
+#    ports:
+#      - "8700:8700"
+#    environment:
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-statement:3306/statement_db
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
+#    depends_on:
+#      - mysql-statement
+#      - naming-server
 
 volumes:
   auth-data:
