--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -94,8 +94,8 @@ springdoc:
         url: /statement-service/v3/api-docs
   override-server-url: true
 
-#jwt:
-#  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
-#  expiration: 86400000 # 24 horas em ms
+jwt:
+  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
+  expiration: 86400000 # 24 horas em ms
 
 
