--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@react-google-maps/api": "^2.20.7",
+    "@stomp/stompjs": "^7.1.1",
     "@vis.gl/react-google-maps": "^1.5.4",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.1",
@@ -29,6 +30,7 @@
     "react-slick": "^0.30.3",
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.5.1",
     "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
