--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -296,10 +296,10 @@ services:
     ports:
       - "8900:8900"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-statement:3306/statement_db
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-investment:3306/investment_db
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://naming-server:8761/eureka/
     depends_on:
-      - mysql-statement
+      - mysql-investment
       - naming-server
 
 volumes:
