--- a/currency-exchange/src/main/resources/application.yml
+++ b/currency-exchange/src/main/resources/application.yml
@@ -31,7 +31,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    prefer-ip-address: true     # opcional: se quiser registrar pelo IP em vez de hostname
+    prefer-ip-address: true
     instance-id: ${spring.application.name}:${server.port}
     hostname: localhost
     lease-renewal-interval-in-seconds: 5
@@ -45,10 +45,10 @@ management:
 
 springdoc:
   api-docs:
-    path: /exchange/v3/api-docs # Caminho onde o JSON da documentação será gerado para este microserviço
+    path: /exchange/v3/api-docs
   swagger-ui:
-    path: /swagger-ui.html # Caminho padrão para o Swagger UI
-    url: /exchange/v3/api-docs # Aponta o Swagger UI para o JSON da documentação deste microserviço
+    path: /swagger-ui.html
+    url: /exchange/v3/api-docs
   override-server-url: true
 
 #jwt:
