--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -24,7 +24,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    prefer-ip-address: true     # opcional: se quiser registrar pelo IP em vez de hostname
+    prefer-ip-address: true
     instance-id: ${spring.application.name}:${server.port}
     hostname: localhost
     lease-renewal-interval-in-seconds: 5
