--- a/frontend-cicarus/.env
+++ b/frontend-cicarus/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://172.203.234.78:8765
-; VITE_API_URL=http://localhost:8765
+; VITE_API_URL=http://172.203.234.78:8765
+VITE_API_URL=http://localhost:8765
 
